# routes/exercises.js
@@ -1,8 +1,12 @@
 const express = require('express');
 const router = express.Router();
 const exercisesController = require('../controllers/exercises');
+const validateExercise = require('../middleware/validateExercise');
 
 router.get('/', exercisesController.getAll);
-router.post('/', exercisesController.create);
+router.get('/:id', exercisesController.getOne);
+router.post('/', validateExercise, exercisesController.create);
+router.put('/:id', validateExercise, exercisesController.update);
+router.delete('/:id', exercisesController.remove);
 
 module.exports = router;
